Update SEE MORE to go to new tab

--- a/app/index.html
+++ b/app/index.html
@@ -243,7 +243,7 @@
               </div>
             </div>
             <div class="work-btn-wrapper">
-              <a class="btn btn-default" href="https://vimeo.com/narratorgroup">SEE MORE</a>
+              <a class="btn btn-default" href="https://vimeo.com/narratorgroup" target="_blank">SEE MORE</a>
             </div>
           </div>
           <div id="section-work-flex-mobile" class="content-centered">
