--- a/app/index.html
+++ b/app/index.html
@@ -176,7 +176,9 @@
                 </div>
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
-              <img src="images/image-woman.jpg" alt="Woman" />
+              <a href="#workshop-detail">
+                <img src="images/image-woman.jpg" alt="Woman" />
+              </a>
             </div>
           </div>
           <div id="section-workshop-flex-mobile" class="content-centered">
