Switch default campfire image to jpg instead of png for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
             <h1>For the best experience, please view this site in a modern browser.</h1>
           </video>
           <div id="campfire-image">
-            <img src="images/campfire.png" alt="Campfire">
+            <img src="images/campfire.jpg" alt="Campfire">
           </div>
           <div id="mountains-image">
             <img src="images/campfire-background.png" alt="Mountains">
