Update to move narrator.min.js from JungleJS to Narrator

--- a/app/index.html
+++ b/app/index.html
@@ -803,7 +803,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
   <!-- build:js scripts/plugins.js -->
   <!-- endbuild -->
-  <script src="/narrator/narrator.min.js"></script>
+  <script src="lib/narrator.min.js"></script>
   <!-- build:js scripts/main.js -->
   <script src="scripts/autoplayDetect.js"></script>
   <script src="scripts/hashChange.js"></script>
