Add gradient to header and set header logo to go home

--- a/app/index.html
+++ b/app/index.html
@@ -733,7 +733,9 @@
     </div>
   </div>
   <div id="section-header">
-    <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
+    <a href="#campfire">
+      <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
+    </a>
     <a href="#campfire">
       <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
     </a>
