Add html keywords

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="The Narrator Group provides video and digital media services to help you tell your company's story in the most effective way possible.">
+    <meta name="keywords" content="digital,media,narrator,group,video,production,denver,colorado">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <meta property="og:title" content="The Narrator Group" />
