Add links to Digital Creative Services section

--- a/app/index.html
+++ b/app/index.html
@@ -615,13 +615,19 @@
             <h2>eMARKETER.COM</h2>
             <div class="digital-examples-row examples-row">
               <div class="digital-example example">
-                <img src="images/digital1.png" alt="digital 1" />
+                <a href="http://heartandmindstrategies.com/">
+                  <img src="images/digital1.png" alt="digital 1" />
+                </a>
               </div>
               <div class="digital-example example">
-                <img src="images/digital2.png" alt="digital 2" />
+                <a href="http://www.westworksstudios.com/">
+                  <img src="images/digital2.png" alt="digital 2" />
+                </a>
               </div>
               <div class="digital-example example">
-                <img src="images/digital3.png" alt="digital 3" />
+                <a href="http://serviamco.com/">
+                  <img src="images/digital3.png" alt="digital 3" />
+                </a>
               </div>
             </div>
           </div>
