Fix icon and button visibility in subsections on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -420,7 +420,8 @@
               </ul>
             </li>
           </ol>
-          <img class="icon" src="images/icon-workshop.png" />
+          <img class="icon icon-dark" src="images/icon-workshop.png" />
+          <img class="icon icon-light" src="images/icon-workshop-white.png" />
           <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
           <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
           <div id="contact-section">
@@ -459,7 +460,8 @@
               <li>Full production and post-production services: from filming and editing to custom graphics, animation, sound and music</li>
               <li>Express video packages for smaller businesses and budgets</li>
             </ul>
-            <img class="icon" src="images/icon-video.png" />
+            <img class="icon icon-dark" src="images/icon-video.png" />
+            <img class="icon icon-light" src="images/icon-video-white.png" />
             <div class="quote-blue">&quot;Videos are shared 12x more than links and text posts combined.&quot;</div>
             <h2>PINTEREST</h2>
             <div id="video-callout" class="callout">CLICK TO WATCH THE VIDEOS</div>
@@ -527,7 +529,8 @@
               <li>Audience and problem definition, voice and tone</li>
               <li>Naming, identity, logo and video imagery</li>
             </ul>
-            <img class="icon" src="images/icon-branding.png" />
+            <img class="icon icon-dark" src="images/icon-branding.png" />
+            <img class="icon icon-light" src="images/icon-branding-white.png" />
             <div class="quote-blue">&quot;Emotion is the primary reason consumers prefer brand name products.&quot;</div>
             <h2>PSYCHOLOGY TODAY</h2>
             <div class="brand-examples-row examples-row">
@@ -548,7 +551,8 @@
         </div>
         <div id="subsection-music" class="subsection item" slide="2">
           <div class="subsection-child" class="subsection-child">
-            <img class="main-image" src="/images/music-girl.png" />
+            <img class="main-image icon-dark" src="/images/music-girl.png" />
+            <img class="main-image icon-light" src="/images/music-girl-white.png" />
             <h2>Music Creative Services</h2>
             <h1>No one ever danced to a mission statement</h1>
             <div class="white-line"></div>
@@ -562,7 +566,8 @@
             </ul>
             <div class="quote-blue">&quot;Research shows music dramatially boosts memory&quot;</div>
             <h2>BUSINESS INSIDER</h2>
-            <img class="icon" src="images/icon-music.png" />
+            <img class="icon icon-dark" src="images/icon-music.png" />
+            <img class="icon icon-light" src="images/icon-music-white.png" />
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
             <h2>ERIC SHEINKOP</h2>
             <div><a class="btn" href="http://www.brandedmusic.com/" target="_blank">GO TO OUR MUSIC SITE</a></div>
@@ -583,7 +588,8 @@
               <li>Logos, identity, typography, brand colors</li>
               <li>Digital, collateral, print and trade print</li>
             </ul>
-            <img class="icon" src="images/icon-design.png" />
+            <img class="icon icon-dark" src="images/icon-design.png" />
+            <img class="icon icon-light" src="images/icon-design-white.png" />
             <div class="quote-blue">&quot;Design is the silent ambassador of your brand.&quot;</div>
             <h2>PAUL RAND</h2>
             <div class="design-examples-row examples-row">
@@ -611,7 +617,8 @@
               <li>Pre-roll video</li>
               <li>Video, social and content marketing</li>
             </ul>
-            <img class="icon" src="images/icon-digital.png" />
+            <img class="icon icon-dark" src="images/icon-digital.png" />
+            <img class="icon icon-light" src="images/icon-digital-white.png" />
             <div class="quote-blue">&quot;Digital media now surpasses TV as the media where consumers spend the most time each day.&quot;</div>
             <h2>eMARKETER.COM</h2>
             <div class="digital-examples-row examples-row">
@@ -646,7 +653,8 @@
               <li>Community outreach and influencer engagement</li>
               <li>Social media strategy and playbooks</li>
             </ul>
-            <img class="icon" src="images/icon-network.png" />
+            <img class="icon icon-dark" src="images/icon-network.png" />
+            <img class="icon icon-light" src="images/icon-network-white.png" />
             <div class="quote-blue">81% of consumers say recommendations influence their buying decisions.</div>
           </div>
         </div>
@@ -662,7 +670,8 @@
               <li>Audio&#8212;music, voice-overs, podcasts, commercials and sound effects</li>
               <li>Thought&#8212;articles, posts, whitepapers, presentations, e-books, direct mail, email and more</li>
             </ul>
-            <img class="icon" src="images/icon-content.png" />
+            <img class="icon icon-dark" src="images/icon-content.png" />
+            <img class="icon icon-light" src="images/icon-content-white.png" />
             <div class="quote-blue">88% of executive buyers want a conversation, not a presentation</div>
           </div>
         </div>
@@ -682,7 +691,8 @@
               <li>Mnemonics</li>
               <li>Short and long-form execution such as 30 or 60 second commercials, brand videos, webisodes, short-films, documenteries, interviews...</li>
             </ul>
-            <img class="icon" src="images/icon-broadcast.png" />
+            <img class="icon icon-dark" src="images/icon-broadcast.png" />
+            <img class="icon icon-light" src="images/icon-broadcast-white.png" />
             <div class="quote-blue">65% of consumers say TV ads influence their buying decisions</div>
             <div id="broadcast-callout" class="callout">SEE OUR BROADCAST WORK</div>
             <div class="broadcast-examples-row examples-row">
