Update open graph references

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
 
     <meta property="og:title" content="The Narrator Group" />
     <meta property="og:description" content="The Narrator Group provides video and digital media services to help you tell your company's story in the most effective way possible." />
-    <meta property="og:url" content="http://narrator.jungdigital.com" />
-    <meta property="og:image" content="http://narrator.jungdigital.com/images/opengraph.jpg" />
+    <meta property="og:url" content="http://www.narratorgroup.com" />
+    <meta property="og:image" content="http://www.narratorgroup.com/images/opengraph.jpg" />
 
     <title>The Narrator Group</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
