Add two text changes per instructions on basecamp

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
           <div id="section-contact-flex" class="content-centered">
-            <h1 id="contact-header">Let&#8217;s find your best story and tell it together</h1>
+            <h1 id="contact-header">Contact us to find and tell a better story</h1>
             <div id="contact-info">
               <div>The Narrator Group</div>
               <div> Phone
@@ -424,6 +424,7 @@
           <img class="icon icon-light" src="images/icon-workshop-white.png" />
           <div class="quote-blue">&quot;We found a message everyone could get behind. More importantly, we found a good story. We're looking to bring their workshop to other parts of the company.&quot;</div>
           <h2>LESLIE RUSSEL, VP COMCAST WHOLESALE</h2>
+          <div class="callout" style="text-align:center;">CALL TO FIND OUT MORE AND TO SCHEDULE YOUR STORY WORKSHOP.</div>
           <div id="contact-section">
             <div id="contact-info">
               <div>The Narrator Group</div>
