Updating copy from Mark Toft

--- a/app/index.html
+++ b/app/index.html
@@ -98,8 +98,8 @@
             <div class="section-story-type-header">
               <h1>Telling your story well</h1>
               <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner.
-                <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or branded music, we work with you to create something memorable and true.</span>
-                <span class="story-mobile-copy">We work with a variety of mediums to make your story memorable and true.</span>
+                <span class="story-desktop-copy">The right creative partner is collaborative and knows how to move audiences to act. We’re experts at bringing your story to life through film, video, design, content, digital platforms and music.</span>
+                <span class="story-mobile-copy">The right creative partner is collaborative and knows how to move audiences to act.</span>
               </div>
             </div>
             <div class="story-types">
@@ -164,7 +164,7 @@
             <div class="work-right">
               <h2>STRATEGIC SERVICES</h2>
               <h1>Finding your story</h1>
-              <div class="main">Most marketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen.</div>
+              <div class="main">Most marketers get it backwards. They focus on tactics before message. Neglecting the fact that message matters is why a lot of marketing fails. We help clients succeed by finding abrand’s authentic purpose and the reason others should care. We offer a unique process to uncover your authentic message. We call it the Story Workshop.</div>
               <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
               <a class="btn btn-default" href="#workshop-detail">STORY WORKSHOP DETAILS</a>
             </div>
@@ -225,21 +225,21 @@
             </div>
             <div class="work-recent-stories">
               <div class="work-story-1">
-                <a class="vimeo" href="https://vimeo.com/119407320">
-                  <img src="https://i.vimeocdn.com/video/506617727_700.jpg">
+                <a class="vimeo" href="https://vimeo.com/182653615">
+                  <img src="https://i.vimeocdn.com/video/591627168.webp?mw=1920&mh=1080&q=70">
                   <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="work-stories-right">
                 <div class="work-story-2">
-                  <a class="vimeo" href="https://vimeo.com/135587745">
-                    <img src="https://i.vimeocdn.com/video/547608837_500.jpg">
+                  <a class="vimeo" href="https://vimeo.com/214575778">
+                    <img src="https://i.vimeocdn.com/video/631083036.webp?mw=1920&mh=1080&q=70">
                     <i class="fa fa-play"></i>
                   </a>
                 </div>
                 <div class="work-story-3">
-                  <a class="vimeo" href="https://vimeo.com/148580052">
-                    <img src="https://i.vimeocdn.com/video/547605888_500.jpg">
+                  <a class="vimeo" href="https://vimeo.com/162692257">
+                    <img src="https://i.vimeocdn.com/video/565319870.webp?mw=1500&mh=844&q=70">
                     <i class="fa fa-play"></i>
                   </a>
                 </div>
@@ -258,8 +258,8 @@
             </div>
             <div class="work-recent-stories">
               <div class="work-story-1">
-                <a class="vimeo" href="https://vimeo.com/119407320">
-                  <img src="https://i.vimeocdn.com/video/506617727_700.jpg">
+                <a class="vimeo" href="https://vimeo.com/182653615">
+                  <img src="https://i.vimeocdn.com/video/591627168.webp?mw=1920&mh=1080&q=70">
                   <i class="fa fa-play"></i>
                 </a>
               </div>
@@ -298,10 +298,10 @@
           <div id="section-approach-flex" class="content-centered">
             <div id="approach-main">
               <h2>APPROACH</h2>
-              <h1>Stories are better than ads</h1>
-              <div class="main">There’s a reason people tune out marketing messages. They’re flooded with them. Ads interrupt the stories we care about. But a well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. We grow brands by turning marketing messages into stories that people want to see and hear.
+              <h1>The reality of how people make decisions</h1>
+              <div class="main">There’s a reason people tune out marketing messages. They’re flooded with them. Ads interrupt the stories we care about. But stories are different. A well-told story reveals truth and is remembered. We grow brands by turning marketing messages into authentic stories that people want to see and hear.
               </div>
-              <div class="main-mobile">There’s a reason people tune out marketing messages. They’re flooded with them. But a well-told story reveals truth and stays with us. We grow brands by turning marketing messages into stories that people want to see and hear.
+              <div class="main-mobile">There’s a reason people tune out marketing messages. They’re flooded with them. Ads interrupt the stories we care about. But stories are different. A well-told story reveals truth and is remembered. We grow brands by turning marketing messages into authentic stories that people want to see and hear.
               </div>
               <div id="approach-quote-desktop">
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -342,11 +342,11 @@
         <div id="section-about-child" class="section-child">
           <div id="section-about-flex" class="content-centered">
             <h2>ABOUT</h2>
-            <h1>Creating stories that sell</h1>
-            <div class="main">Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
-            <div class="sub">And they’ve relied on us to bring rooms full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with helping them tell a better brand story.</div>
-            <div class="main-mobile">Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
-            <div class="sub-mobile">And they’ve relied on us to bring rooms full of folded-arm executives to enthusiastic agreement on a messaging strategy.</div>
+            <h1>We have dirt in our cleats</h1>
+            <div class="main">Our founders have national and global experience in just about every industry. Our clients grow and succeed because we know how to develop effective strategies, brand stories, videos and advertising campaigns.</div>
+            <div class="sub">We have experience at places like Leo Burnett and JWT and in big markets like Chicago, Zurich, Paris and Boston. We love what we do. We do big-agency quality work at new model prices.</div>
+            <div class="main-mobile">Our founders have national and global experience in just about every industry. Our clients grow and succeed because we know how to develop effective strategies, brand stories, videos and advertising campaigns.</div>
+            <div class="sub-mobile">We have experience at places like Leo Burnett and JWT and in big markets like Chicago, Zurich, Paris and Boston. We love what we do. We do big-agency quality work at new model prices.</div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
               <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
