Fixes and fixing the build

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
       <div id="section-contact" class="section">
         <div id="section-contact-child" class="section-child">
           <div id="section-contact-flex" class="content-centered">
-            <h1 id="contact-header">Contact us to find and tell a better story</h1>
+            <h1 id="contact-header">Contact us for more effective branding and advertising</h1>
             <div id="contact-info">
               <div>The Narrator Group</div>
               <div> Phone
