Fixing David -> Dennis Nutter in Approach

--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,7 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
                 <div class="quote">
                   <div class="quote-text">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
-                  <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
+                  <div class="quote-attrib">DENNIS NUTTER, SIGMA GROUP</div>
                 </div>
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
@@ -323,7 +323,7 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
                 <div class="quote">
                   <div class="quote-text">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
-                  <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
+                  <div class="quote-attrib">DENNIS NUTTER, SIGMA GROUP</div>
                 </div>
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
@@ -802,7 +802,7 @@
   e=o.createElement(i);r=o.getElementsByTagName(i)[0];
   e.src='https://www.google-analytics.com/analytics.js';
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X');ga('send','pageview');
+  ga('create','UA-107538224-1');ga('send','pageview');
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.1/gl-matrix-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenLite.min.js"></script>
